2002-11-27	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added menu item and keyboard shortcut to close the current 
      terminal session.