@@ -10,9 +10,10 @@
 		<string>230 675 316 44 0 0 1280 1002 </string>
 	</dict>
 	<key>IBFramework Version</key>
-	<string>286.0</string>
+	<string>283.0</string>
 	<key>IBOpenObjects</key>
 	<array>
+		<integer>387</integer>
 		<integer>29</integer>
 	</array>
 	<key>IBSystem Version</key>
